fixed olans-tab articles content and aligned to flex start

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -130,6 +130,7 @@ header{
 .plans-tabs{
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 .plans-tabs>article{
